fix transition zoom on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ figure {
   }
 
   .main-content {
-     width: 440px;
+     width: 100%;
   }
 }
 
